force-app/main/default/objects/ProductOptionValue_bkcr_prd__dll/fields/skuExtension__c.field-meta.xml
<CustomField>
    <fullName>skuExtension__c</fullName>
    <label>skuExtension</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>skuExtension</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>