force-app/main/default/objects/ProductOptionValue_bkcr_prd__dll/fields/valueId__c.field-meta.xml
<CustomField>
    <fullName>valueId__c</fullName>
    <label>valueId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>valueId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>